2007-08-21  Derek Price  <derek@ximbiot.com>

	* HACKING: Note Autoconf 2.61 and Automake 1.10 are used in
	development.
	* NEWS: Note same and why.
	* configure.in: Require Automake 1.10 so that maintainer mode is
	required to build C sources from YACC sources.
	* build-aux/bison-missing: Remove obsolete file.
	* build-aux/compile, build-aux/config.guess, build-aux/config.sub,
	build-aux/depcomp, build-aux/install-sh, build-aux/mdate-sh,
	build-aux/missing, build-aux/texinfo.tex, build-aux/ylwrap: Update
	from Automake 1.10.

2007-06-18  Derek Price  <derek@ximbiot.com>

	* NEWS: Note import now keeps metadata to itself.

2007-06-15  Derek Price  <derek@ximbiot.com>

	* NEWS: Note `cvs import CVS-/CVS' fix.

2007-06-12  Mark D. Baushke  <mdb@gnu.org>

	[bug #17083]
	* NEWS: Document :gserver:luser@host:/path support.

2007-05-11  Derek Price  <derek@ximbiot.com>

	* NEWS: Note improved error messages for `cvs history'.

2007-05-09  Derek Price  <derek@ximbiot.com>
	and Sylvain Beucler  <beuc@beuc.net>

	* NEWS: Documented --allow-root-regexp.

2007-05-07  Derek Price  <derek@ximbiot.com>

	* NEWS: Note removal of remote `cvs init'.

2006-09-25  Mark D. Baushke  <mdb@gnu.org>

	* config.h.in, configure: Regenerated.
	maint-aux/gnulib-filelist.txt: Update from GNULIB.

2006-09-22  Mark D. Baushke  <mdb@gnu.org>

	* configure.in: Drop gl_FUNC_MMAP_ANON requirement.
	* Makefile.in, configure, aclocal.m4, config.h.in, configure:
	Regenerated.
	* maint-aux/Makefile.in: Ditto.
	* maint-aux/gnulib-filelist.txt: Update from GNULIB.

2006-09-12  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new %T commitinfo flag.

2006-09-06  Derek Price  <derek@ximbiot.com>

	* NEWS: Note apply_rcs_diff speedup.

2006-09-02  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in, aclocal.m4, config.h.in, configure: Regenerated.
	* maint-aux/Makefile.in: Ditto.
	* maint-aux/gnulib-filelist.txt: Update from GNULIB.

2006-08-28  Derek Price  <derek@ximbiot.com>
